bad/2020-07-06/15-40/78.0/build.err
run.c:20:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^